# csvb

./: JsonandToml.ipynb  README.norg  TinyDB.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  Untitled6.ipynb  aplrules.json  aplrules.toml  money_dp_pandas.ipynb  pandas.ipynb  pandas_to_xar.ipynb  pd_rules.ipynb  possible_match_table.csv  pyproject.toml  toml.ipynb  xar_transactions-Copy1.ipynb  xar_transactions.ipynb
.ipynb_checkpoints/: JsonandToml-checkpoint.ipynb  Untitled-checkpoint.ipynb  Untitled2-checkpoint.ipynb  money_dp_pandas-checkpoint.ipynb  pandas-checkpoint.ipynb  pd_rules-checkpoint.ipynb  what-checkpoint.csv  xar_transactions-checkpoint.ipynb
csvb/: __init__.py  ingest.py
