[tool.poetry]
name = "csvb"
version = "0.1.0"
description = ""
authors = ["Keith W. Davis <kwdprof@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.9"
rich = "^13.7.0"
pandas = "^2.1.4"
xarray = "^2023.12.0"
numpy = "^1.26.2"
gspread = "^5.12.3"
flox = "^0.8.5"
ipysheet = "^0.7.0"
tomlkit = "^0.12.4"
plotly = "^5.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
